Don't log debug for Commons